[package]
name = "ligate-rollup"
description = "Ligate Chain rollup binary: full node + sequencer for the ligate-stf runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "ligate-node"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
borsh.workspace = true
clap.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml = "1.1"
tracing.workspace = true

# SDK glue. All `native`-flavoured because this is a node binary,
# never a guest.
sov-address                    = { workspace = true, features = ["evm", "native"] }
sov-bank                       = { workspace = true, features = ["native"] }
sov-db                         = { workspace = true }
sov-kernels                    = { workspace = true, features = ["native"] }
sov-blob-sender                = { workspace = true }
sov-celestia-adapter           = { workspace = true, features = ["native"] }
sov-mock-da                    = { workspace = true, features = ["native"] }
sov-mock-zkvm                  = { workspace = true, features = ["native"] }
sov-risc0-adapter              = { workspace = true, default-features = false, features = ["native"] }
ligate-prover-risc0            = { path = "provers/risc0" }
sov-modules-api                = { workspace = true, features = ["native"] }
sov-modules-rollup-blueprint   = { workspace = true, features = ["native"] }
sov-modules-stf-blueprint      = { workspace = true, features = ["native"] }
sov-rollup-full-node-interface = { workspace = true }
sov-rollup-interface           = { workspace = true, features = ["native"] }
sov-sequencer                  = { workspace = true }
sov-state                      = { workspace = true, features = ["native"] }
sov-stf-runner                 = { workspace = true }

# The Ligate Chain runtime — pulled in with `native` so the
# `runtime_capabilities` module (Runtime/HasCapabilities/HasKernel
# trait impls) is available to the blueprint.
ligate-stf = { path = "../stf", features = ["native"] }

# Direct path dep so main.rs can call `attestation::metrics::init()`
# at startup. The `native` feature pulls in the Prometheus counter
# definitions; the rest of the binary already gets the type via the
# ligate-stf chain.
attestation = { path = "../modules/attestation", features = ["native"] }

# Prometheus + axum for the `/metrics` endpoint (issue #110, Phase 1).
# axum runs in its own tokio task next to the SDK's REST server so we
# don't have to touch the blueprint's router setup.
prometheus = { workspace = true, features = ["process"] }
axum       = { workspace = true }

# Loopback HTTP client for the sequencer-role poller (chain#446 followup).
# The role poller hits the SDK's own `/v1/sequencer/role` endpoint via
# 127.0.0.1; reqwest is already on the workspace because client-rs and
# bootstrap-cli use it for their REST surfaces.
reqwest = { workspace = true }

# Postgres pool for `/v1/cluster/nodes` (issue #442). Scoped to this
# crate only: the SDK fork's heartbeat task has its own pool for
# election; rather than expose it, we open a tiny 2-connection pool
# here for the read-only topology query. Same `sqlx` version as the
# SDK fork's sov-sequencer (0.8) to avoid duplicate compilation.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "time"] }
sov-full-node-configs = { workspace = true }

[dev-dependencies]
reqwest         = { version = "0.12", default-features = false, features = ["rustls-tls"] }
ed25519-dalek   = { workspace = true }
hex             = "0.4"
serde_json      = { workspace = true }
sov-test-utils  = { workspace = true }
tempfile        = { workspace = true }
tower           = { version = "0.5", features = ["util"] }
http-body-util  = "0.1"
# Re-list ligate-stf with the `test-utils` feature so the e2e smoke
# tests get the `MinimalGenesis` impl on the production runtime that
# `TestRunner` requires. Cargo unions this with the [dependencies]
# entry above for test builds.
ligate-stf      = { path = "../stf", features = ["test-utils"] }
# `sov-celestia-adapter` already lives in `[dependencies]`, so the
# integration tests can use it directly.
# Signing client for the binary-spawn smoke (#146 v2): build + sign +
# submit RegisterAttestorSet / RegisterSchema / SubmitAttestation
# through the production `RollupAuthenticator` path that the
# in-process `e2e_smoke.rs` can't reach.
ligate-client   = { path = "../client-rs", features = ["submit"] }
sha2            = { workspace = true }
bech32          = "0.11"
# Used by `restart_recovery.rs` (#193) to serialise the four
# kill-and-respawn scenarios. CI runners can't host 4 concurrent
# ligate-node spawns; `#[serial]` forces sequential execution per-
# test, leaving the rest of the rollup test suite parallel.
serial_test     = "3"
