[package]
name = "ligate-stf"
description = "Ligate Chain state transition function: runtime trait wiring + genesis loaders"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
borsh.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true

# The runtime composition struct lives in the sibling
# `ligate-stf-declaration` crate so this crate's `build.rs` can
# import it (Cargo forbids a build script from depending on its own
# crate).
ligate-stf-declaration = { path = "../stf-declaration" }

# SDK glue for the trait impls + genesis loader.
sov-modules-api           = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-rollup-interface      = { workspace = true }
sov-state                 = { workspace = true }
sov-address               = { workspace = true, features = ["evm"] }

# Modules whose types appear in trait impls or the genesis loader.
sov-bank         = { workspace = true }
sov-capabilities = { workspace = true }
sov-kernels      = { workspace = true }

# Endpoints surfaced by `Runtime::endpoints` — only needed under
# the `native` feature (the wrapper itself ships in ZK guest builds
# without HTTP).
sov-rollup-apis = { workspace = true, optional = true }

# Ligate-native modules referenced by the genesis loader (cross-
# module invariant checks against `attestation::AttestationConfig`).
attestation = { path = "../modules/attestation" }

# Test-only trait impls (MinimalGenesis for Runtime) live behind the
# `test-utils` feature. Pulled in only when downstream integration
# tests opt in via `features = ["test-utils"]` in dev-dependencies.
sov-test-utils         = { workspace = true, optional = true }
sov-sequencer-registry = { workspace = true, optional = true }

[build-dependencies]
# `native` features are required because `sov_build` exercises
# host-side trait impls (signature verification, ZkVM hosts) that
# are gated on the same feature flag.
anyhow.workspace = true
sov-build       = { workspace = true }
sov-modules-api = { workspace = true, features = ["native"] }
sov-mock-da     = { workspace = true, features = ["native"] }
sov-mock-zkvm   = { workspace = true, features = ["native"] }
sov-address     = { workspace = true, features = ["evm", "native"] }
ligate-stf-declaration = { path = "../stf-declaration", features = ["native"] }

[dev-dependencies]
sha2           = { workspace = true }
sov-test-utils = { workspace = true }
sov-mock-da    = { workspace = true, features = ["native"] }
tempfile       = { workspace = true }

[features]
default = []
native = [
    "dep:sov-rollup-apis",
    "ligate-stf-declaration/native",
    "sov-address/native",
    "sov-bank/native",
    "sov-capabilities/native",
    "sov-kernels/native",
    "sov-modules-api/native",
    "sov-modules-stf-blueprint/native",
    "sov-rollup-interface/native",
    "sov-state/native",
    "attestation/native",
]
# Opt-in test scaffolding: enables the `test_utils` module, which
# provides `MinimalGenesis<Runtime<S>>` so the SDK's `TestRunner` can
# drive the production runtime in external integration tests.
test-utils = [
    "dep:sov-test-utils",
    "dep:sov-sequencer-registry",
    "native",
]
