[package]
name = "attestation"
description = "Ligate Themisra attestation module: Proof of Prompt receipts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
borsh.workspace = true
ed25519-dalek.workspace = true
schemars.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

sov-modules-api = { workspace = true }
sov-bank        = { workspace = true }

[dev-dependencies]
attestation     = { path = ".", features = ["native"] }
serde_json.workspace = true
sov-modules-api = { workspace = true, features = ["native"] }
sov-bank        = { workspace = true, features = ["native"] }
sov-state       = { workspace = true, features = ["native"] }
sov-test-utils  = { workspace = true }
tempfile.workspace = true
strum.workspace = true
tokio.workspace = true

[features]
default = []
native = [
    "sov-modules-api/native",
    "sov-bank/native",
]
