[package]
name = "attestation"
description = "Ligate Themisra attestation module: Proof of Prompt receipts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
borsh.workspace = true
ed25519-dalek.workspace = true
# hex-encoding for the `expected_digest` field on
# `AttestationError::InvalidSignature`, so attestors whose off-chain
# digest differs from the chain's can read the chain's value out of
# the error response directly. Matches `bootstrap-cli` / `genesis-tool`
# pin (workspace doesn't share a `hex` entry).
hex = "0.4"
schemars.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

sov-modules-api = { workspace = true }
sov-bank        = { workspace = true }

# Prometheus counters for the module's call paths. Optional behind
# the `metrics` feature so the in-zkVM build (which doesn't need
# observability) doesn't pull libcompiler_builtins dupes. Tracking
# issue: #110 (Phase 1 scope).
prometheus = { workspace = true, optional = true }

[dev-dependencies]
attestation     = { path = ".", features = ["native"] }
serde_json.workspace = true
sov-modules-api = { workspace = true, features = ["native"] }
sov-bank        = { workspace = true, features = ["native"] }
sov-state       = { workspace = true, features = ["native"] }
sov-test-utils  = { workspace = true }
tempfile.workspace = true
strum.workspace = true
tokio.workspace = true
# Direct dep so the integration test can call `prometheus::gather()`
# to introspect the rejection counter (Phase 2 of #110). Without
# this, transitive visibility through `attestation/native` isn't
# enough for `use prometheus`.
prometheus.workspace = true
# Property-based testing for codec roundtrips (#122). Complements
# `borsh_snapshot.rs` (wire-format guard) with random-input
# decode(encode(t)) == t coverage.
proptest = "1"

[features]
default = []
# `native` includes Prometheus counters: only the host build
# observes them, the zkVM guest stays clean. The counters expose
# nothing in the zkVM proof; they live entirely on the prover host.
native = [
    "sov-modules-api/native",
    "sov-bank/native",
    "dep:prometheus",
]
