[package]
name = "bounty"
description = "Ligate bounty marketplace module: buyer-funded attestation bounties (chain#385 RFC)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
borsh.workspace = true
schemars.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

attestation     = { path = "../attestation" }
sov-modules-api = { workspace = true }
sov-bank        = { workspace = true }

# Prometheus counters for the module's call paths. Optional behind
# the `metrics` feature so the in-zkVM build doesn't pull
# libcompiler_builtins dupes. Same pattern as the attestation module
# (tracked under #110 Phase 1).
prometheus = { workspace = true, optional = true }

[dev-dependencies]
# Bounty's integration tests run real handler flows via
# `sov-test-utils::TestRunner`: PostBounty escrow, ClaimBounty payout
# composition with cross-module attestation reads, dispute lock + bond
# payout, cancel + refund. `sov-test-utils` brings the storage
# backend (`librocksdb-sys`) transitively; CI handles the libclang
# system dep, local dev on Apple Silicon may need `brew install
# llvm`. The 5 unit tests in `tests/integration.rs` that exercise
# `BountyId::derive` + `DisputeKey` round-trip still pass without the
# storage backend; they live alongside the broader handler tests in
# the same file.
bounty          = { path = ".", features = ["native"] }
attestation     = { path = "../attestation", features = ["native"] }
ed25519-dalek.workspace = true
sov-modules-api = { workspace = true, features = ["native"] }
sov-bank        = { workspace = true, features = ["native"] }
sov-state       = { workspace = true, features = ["native"] }
sov-test-utils  = { workspace = true }
strum.workspace = true

[features]
default = []
native = [
    "sov-modules-api/native",
    "sov-bank/native",
    "attestation/native",
    "dep:prometheus",
]
