[package]
name = "contract"
description = "Ligate contract primitive: work-for-hire deliverable contracts (chain#536 RFC)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
borsh.workspace = true
hex = "0.4"
schemars.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

attestation     = { path = "../attestation" }
sov-modules-api = { workspace = true }
sov-bank        = { workspace = true }

# Prometheus counters behind the `metrics` feature; matches the
# attestation + bounty modules.
prometheus = { workspace = true, optional = true }

[dev-dependencies]
# Tier 1 (pure unit) + tier 2 (TestRunner-based integration) tests
# both live in `tests/integration.rs`. sov-test-utils brings the
# `librocksdb-sys` transitive dep; CI handles libclang.
contract        = { path = ".", features = ["native"] }
attestation     = { path = "../attestation", features = ["native"] }
ed25519-dalek.workspace = true
sov-modules-api = { workspace = true, features = ["native"] }
sov-bank        = { workspace = true, features = ["native"] }
sov-state       = { workspace = true, features = ["native"] }
sov-test-utils  = { workspace = true }
strum.workspace = true

[features]
default = []
native = [
    "sov-modules-api/native",
    "sov-bank/native",
    "attestation/native",
    "dep:prometheus",
]
