[package]
name = "attestation-fuzz"
description = "cargo-fuzz harnesses for the attestation module's untrusted-byte entry points"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

[package.metadata]
cargo-fuzz = true

# Own workspace so the parent `cargo build --workspace` on stable
# doesn't try to build the fuzz binaries (libfuzzer-sys requires
# nightly). Explicit deps below; no `workspace = true` because the
# parent isn't visible from this sub-workspace.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"

attestation = { path = ".." }

# SDK pins. Declared against upstream `Sovereign-Labs/sovereign-sdk`
# at the same rev as the parent workspace's `workspace.dependencies`
# block; the `[patch]` block at the bottom of this file redirects
# every `sov-*` crate to the `ligate-io` fork, exactly as the parent
# workspace does. This fuzz crate is a SEPARATE `[workspace]`, so it
# needs its own `[patch]` mirror -- `[patch]` blocks don't transit
# workspace boundaries, and without it the `attestation` path dep
# resolves a different `Spec` trait than this crate's `sov-*` deps
# (a `trait bound ... : Spec is not satisfied` compile error).
# Keep both the rev below AND the `[patch]` rev in sync on SDK bumps.
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-test-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }
sov-address = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f6cd64749edc56428fbeb7f22702458b0afb698a" }

borsh = "1.5"

# REST extractor harness deps (#157). Axum's path extractor + tower's
# oneshot let each fuzz target hit the same code path the HTTP
# handler would, including percent-decoding and routing.
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
once_cell = "1"

# Each target is its own binary. cargo-fuzz auto-discovers them but
# explicit `[[bin]]` blocks make `cargo build` happy and surface the
# inventory in tooling.

[[bin]]
name = "borsh_call_message"
path = "fuzz_targets/borsh_call_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "borsh_schema"
path = "fuzz_targets/borsh_schema.rs"
test = false
doc = false
bench = false

[[bin]]
name = "borsh_attestor_set"
path = "fuzz_targets/borsh_attestor_set.rs"
test = false
doc = false
bench = false

[[bin]]
name = "borsh_attestation"
path = "fuzz_targets/borsh_attestation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "borsh_signed_payload"
path = "fuzz_targets/borsh_signed_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bech32_id"
path = "fuzz_targets/bech32_id.rs"
test = false
doc = false
bench = false

[[bin]]
name = "attestation_id_parse"
path = "fuzz_targets/attestation_id_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rest_schema_path"
path = "fuzz_targets/rest_schema_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rest_attestor_set_path"
path = "fuzz_targets/rest_attestor_set_path.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rest_attestation_path"
path = "fuzz_targets/rest_attestation_path.rs"
test = false
doc = false
bench = false

# SDK fork patch block. Mirrors the parent `ligate-chain/Cargo.toml`
# `[patch]` block: redirects every `sov-*` crate to the `ligate-io`
# fork so the `attestation` path dep and this crate's direct `sov-*`
# deps resolve to byte-identical SDK code. `[patch]` does not cross
# workspace boundaries, and this fuzz crate is its own `[workspace]`,
# so the mirror is mandatory. Keep the rev in sync with the parent
# on every SDK bump (see comment on the `sov-*` deps above).
[patch."https://github.com/Sovereign-Labs/sovereign-sdk.git"]
sov-accounts                   = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-address                    = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-api-spec                   = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-attester-incentives        = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-bank                       = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-blob-sender                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-blob-storage               = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-build                      = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-capabilities               = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-celestia-adapter           = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-chain-state                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-db                         = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-kernels                    = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-mock-da                    = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-mock-zkvm                  = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-modules-api                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-modules-rollup-blueprint   = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-modules-stf-blueprint      = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-node-client                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-operator-incentives        = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-prover-incentives          = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-risc0-adapter              = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-rollup-apis                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-rollup-full-node-interface = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-rollup-interface           = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-sequencer                  = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-sequencer-registry         = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-state                      = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-stf-runner                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-test-utils                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-uniqueness                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
sov-zkvm-utils                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "4b4a313b7d89cf7ca4b37edd6cefec4123d51add" }
